Ensure privacy and accessibility links open in a new tab

--- a/src/FrontendAccountManagement.Web/Views/Shared/Partials/Govuk/_Footer.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/Shared/Partials/Govuk/_Footer.cshtml
@@ -39,12 +39,12 @@
                         </a>
                     </li>
                     <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="@DecorateUrl("https://www.gov.uk/guidance/extended-producer-responsibility-for-packaging-privacy-policy")">
+                        <a class="govuk-footer__link" href="@DecorateUrl("https://www.gov.uk/guidance/extended-producer-responsibility-for-packaging-privacy-policy")" target="_blank">
                             @Localizer["Footer.Privacy"]
                         </a>
                     </li>
                     <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="@DecorateUrl("https://www.gov.uk/guidance/extended-producer-responsibility-for-packaging-accessibility-statement")">
+                        <a class="govuk-footer__link" href="@DecorateUrl("https://www.gov.uk/guidance/extended-producer-responsibility-for-packaging-accessibility-statement")" target="_blank">
                             @Localizer["Footer.Accessibility"]
                         </a>
                     </li>
