Added missing footer items

--- a/src/FrontendAccountManagement.Web/Views/Shared/Partials/Govuk/_Footer.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/Shared/Partials/Govuk/_Footer.cshtml
@@ -23,7 +23,7 @@
         <div class="govuk-footer__meta">
             <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
 
-                <h2 class="govuk-heading-m">@Localizer["Footer.GetHelpX"]</h2>
+                <h2 class="govuk-heading-m">@Localizer["Footer.GetHelp"]</h2>
 
                 <p class="govuk-body">@Localizer["Footer.Email"]: <a class="govuk-link govuk-link--no-visited-state" href="mailto:eprcustomerservice@defra.gov.uk">eprcustomerservice@defra.gov.uk</a></p>
 
