--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/UpdateDetailsConfirmation.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/UpdateDetailsConfirmation.cshtml
@@ -1,6 +1,4 @@
-﻿@using FrontendAccountManagement.Web.Extensions
-@using FrontendAccountManagement.Web.ViewModels.Shared.GovUK
-@using FrontendAccountManagement.Web.ViewModels.AccountManagement
+﻿@using FrontendAccountManagement.Web.ViewModels.AccountManagement
 
 @model UpdateDetailsConfirmationViewModel
 
@@ -10,14 +8,14 @@
             <div class="govuk-grid-column-one-half">
                 <div class="govuk-panel govuk-panel--confirmation">
                     <h1 class="govuk-panel__body govuk-!-font-weight-bold govuk-!-margin-bottom-0 govuk-!-margin-top-0">
-                        Your details have been updated
+                        @Localizer["ConfirmationMessage"]
                     </h1>
                 </div>
                 <p class="govuk-body">
                     @Model.GetFormattedChangeMessage()
                 </p>
                 <a asp-action="ManageAccount" asp-controller="AccountManagement" class="govuk-link" data-module="govuk-link">
-                    Go to manage account
+                    @Localizer["ManageAccountLinkDescription"]
                 </a>
             </div>
         </div>
