--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/ManageAccount.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/ManageAccount.cshtml
@@ -55,6 +55,14 @@
                         null,
                         new {@class = "govuk-link govuk-link--no-visited-state govuk-body-m"})   
                 </div>
+
+                <div class="govuk-!-margin-bottom-4">
+                    @Html.ActionLink(Localizer["CheckYourDetails"].Value,
+                             "CheckYourDetails",
+                             "AccountManagement",
+                             null,
+                             new { @class = "govuk-link govuk-link--no-visited-state govuk-body-m" })
+                </div>
                 
                 <feature name="RemoveUsers">
                     @await Component.InvokeAsync("ManageTeam")
