--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/EditUserDetails.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/EditUserDetails.cshtml
@@ -37,7 +37,8 @@
                                         @Localizer["FirstName"]
                                     </label>
                                 </h2>
-                                <input class="govuk-input" asp-for="FirstName" type="text" aria-describedby="AddressLine2-hint">
+                                @* maxlength attribute empty so to override the attribute being added by StringLength *@
+                                <input class="govuk-input" asp-for="FirstName" type="text" aria-describedby="FirstName" maxlength>
                             </div>
                         </fieldset>
                     </div>
@@ -53,7 +54,8 @@
                                         @Localizer["LastName"]
                                     </label>
                                 </h2>
-                                <input class="govuk-input" asp-for="LastName" type="text" aria-describedby="AddressLine2-hint">
+                                @* maxlength attribute empty so to override the attribute being added by StringLength *@
+                                <input class="govuk-input" asp-for="LastName" type="text" aria-describedby="LastName" maxlength>
                             </div>
                         </fieldset>
                     </div>
@@ -71,7 +73,8 @@
                                             @Localizer["JobTitle"]
                                         </label>
                                     </h2>
-                                    <input class="govuk-input" asp-for="JobTitle" type="text" aria-describedby="AddressLine2-hint">
+                                    @* maxlength attribute empty so to override the attribute being added by StringLength *@
+                                    <input class="govuk-input" asp-for="JobTitle" type="text" aria-describedby="JobTitle" maxlength>
                                 </div>
                             </fieldset>
                         </div>
@@ -90,7 +93,8 @@
                                             @Localizer["TelephoneNumber"]
                                         </label>
                                     </h2>
-                                    <input class="govuk-input" asp-for="Telephone" type="text" aria-describedby="AddressLine2-hint">
+                                    @* maxlength attribute empty so to override the attribute being added by StringLength *@
+                                    <input class="govuk-input" asp-for="Telephone" type="text" aria-describedby="Telephone" maxlength>
                                 </div>
                             </fieldset>
                         </div>
