refactor extension method and PR review

--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/DetailsChangeRequested.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/DetailsChangeRequested.cshtml
@@ -1,4 +1,6 @@
-﻿@using FrontendAccountManagement.Web.ViewModels.AccountManagement
+﻿@using FrontendAccountManagement.Web.Extensions
+@using FrontendAccountManagement.Web.ViewModels.AccountManagement
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 
 @model DetailsChangeRequestedViewModel
 
