--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/EditUserDetails.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/EditUserDetails.cshtml
@@ -32,11 +32,9 @@
                                 <p class="govuk-error-message">
                                     <span asp-validation-for="FirstName"></span>
                                 </p>
-                                <h2 class="govuk-label-wrapper">
-                                    <label class="govuk-label govuk-label--s" for="FirstName">
-                                        @Localizer["FirstName"]
-                                    </label>
-                                </h2>
+                                <label class="govuk-label" for="FirstName">
+                                    @Localizer["FirstName"]
+                                </label>
                                 @* maxlength attribute empty so to override the attribute being added by StringLength *@
                                 <input class="govuk-input" asp-for="FirstName" type="text" aria-describedby="FirstName" maxlength>
                             </div>
@@ -49,11 +47,9 @@
                                 <p class="govuk-error-message">
                                     <span asp-validation-for="LastName"></span>
                                 </p>
-                                <h2 class="govuk-label-wrapper">
-                                    <label class="govuk-label govuk-label--s" for="LastName">
-                                        @Localizer["LastName"]
-                                    </label>
-                                </h2>
+                                <label class="govuk-label" for="LastName">
+                                    @Localizer["LastName"]
+                                </label>
                                 @* maxlength attribute empty so to override the attribute being added by StringLength *@
                                 <input class="govuk-input" asp-for="LastName" type="text" aria-describedby="LastName" maxlength>
                             </div>
@@ -68,11 +64,9 @@
                                     <p class="govuk-error-message">
                                         <span asp-validation-for="JobTitle"></span>
                                     </p>
-                                    <h2 class="govuk-label-wrapper">
-                                        <label class="govuk-label govuk-label--s" for="JobTitle">
-                                            @Localizer["JobTitle"]
-                                        </label>
-                                    </h2>
+                                    <label class="govuk-label" for="JobTitle">
+                                        @Localizer["JobTitle"]
+                                    </label>
                                     @* maxlength attribute empty so to override the attribute being added by StringLength *@
                                     <input class="govuk-input" asp-for="JobTitle" type="text" aria-describedby="JobTitle" maxlength>
                                 </div>
@@ -88,11 +82,9 @@
                                     <p class="govuk-error-message">
                                         <span asp-validation-for="Telephone"></span>
                                     </p>
-                                    <h2 class="govuk-label-wrapper">
-                                        <label class="govuk-label govuk-label--s" for="Telephone">
-                                            @Localizer["TelephoneNumber"]
-                                        </label>
-                                    </h2>
+                                    <label class="govuk-label" for="Telephone">
+                                        @Localizer["TelephoneNumber"]
+                                    </label>
                                     @* maxlength attribute empty so to override the attribute being added by StringLength *@
                                     <input class="govuk-input" asp-for="Telephone" type="text" aria-describedby="Telephone" maxlength>
                                 </div>
