--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/ConfirmCompanyDetails.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/ConfirmCompanyDetails.cshtml
@@ -34,7 +34,8 @@
                                 If these details are wrong, you should:
                             </div>
                             <div>
-                                Check Companies House to see if your organisation’s details are correct. If they aren’t, you can <a class="govuk-link" href="https://www.gov.uk/file-changes-to-a-company-with-companies-house" target="_blank">change them on Companies House (opens in new tab)</a>.
+                                Check Companies House to see if your organisation’s details are correct. If they aren’t, you can 
+                                <a class="govuk-link" href="@Model.ExternalCompanyHouseChangeRequestLink" target="_blank">change them on Companies House (opens in new tab)</a>.
                             </div>
                         </div>
                     </details>
