--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/UpdateDetailsConfirmation.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/UpdateDetailsConfirmation.cshtml
@@ -14,7 +14,7 @@
                     </h1>
                 </div>
                 <p class="govuk-body">
-                    @Model.GetFormattedChangeMessage()
+                    @Model.GetFormattedChangeMessage("Changed")
                 </p>
                 <a asp-action="ManageAccount" asp-controller="AccountManagement" class="govuk-link" data-module="govuk-link">
                     @Localizer["ManageAccountLinkDescription"]
