cleanup from extra models

--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/ConfirmCompanyDetails.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/ConfirmCompanyDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConfirmCompanyDetailsViewModel
+﻿@model FrontendAccountManagement.Web.ViewModels.AccountManagement.ConfirmCompanyDetailsViewModel
 
 @using (Html.BeginForm("ConfirmCompanyDetails", "AccountManagement", FormMethod.Post))
 {
