Fix the way the confirm button on the declaration page works

--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/Declaration.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/Declaration.cshtml
@@ -11,7 +11,7 @@
                 </h1>    
                 <p class="govuk-body">@Localizer["Declaration.Paragraph1"]</p>
                 <p class="govuk-body">@Localizer["Declaration.Paragraph2"]</p>
-                <form action=@FrontendAccountManagement.Web.Constants.PagePath.DetailsChangeRequested>
+                <form method="post">
                     <button class="govuk-button">
                         @Localizer["Declaration.ButtonText"]
                     </button>
