resolve conflicts after rebase on to common branch

--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/ManageAccount.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/ManageAccount.cshtml
@@ -87,7 +87,7 @@
                                 </dt>
                             </div>
                             <dd class="govuk-summary-list__value">
-                                @Model.OrgAddress
+                                @Model.OrganisationAddress
                             </dd>
                         </div>
                     </dl>
