--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/ManageAccount.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/ManageAccount.cshtml
@@ -76,7 +76,7 @@
                     <dl class="govuk-summary-list govuk-!-margin-bottom-0">
                         <div class="govuk-summary-list__row">
                             <div class="govuk-!-margin-right-3">
-                                <dt class="govuk-summary-list__key">
+                                <dt class="govuk-summary-list__value">
                                     @Localizer["CompanyName"]
                                 </dt>
                             </div>
@@ -86,7 +86,7 @@
                         </div>
                         <div class="govuk-summary-list__row">
                             <div class="govuk-!-margin-right-3">
-                                <dt class="govuk-summary-list__key">
+                                <dt class="govuk-summary-list__value">
                                     @Localizer["OrganisationAddress"]
                                 </dt>
                             </div>
@@ -111,7 +111,7 @@
                 <dl class="govuk-summary-list govuk-!-margin-bottom-0">
                     <div class="govuk-summary-list__row">
                         <div class="govuk-!-margin-right-3">
-                            <dt class="govuk-summary-list__key">@Localizer["YourName"]</dt>
+                            <dt class="govuk-summary-list__value">@Localizer["YourName"]</dt>
                         </div>
                         <dd class="govuk-summary-list__value">@Model.UserName</dd>
                     </div>
@@ -119,7 +119,7 @@
                     {
                         <div class="govuk-summary-list__row">
                             <div class="govuk-!-margin-right-3">
-                                <dt class="govuk-summary-list__key">
+                                <dt class="govuk-summary-list__value">
                                     @Localizer["JobTitle"]
                                 </dt>
                             </div>
@@ -132,7 +132,7 @@
                     {
                         <div class="govuk-summary-list__row">
                             <div class="govuk-!-margin-right-3">
-                                <dt class="govuk-summary-list__key">
+                                <dt class="govuk-summary-list__value">
                                     @Localizer["TelephoneNumber"]
                                 </dt>
                             </div>
@@ -145,7 +145,7 @@
 
                     <div class="govuk-summary-list__row">
                         <div class="govuk-!-margin-right-3">
-                            <dt class="govuk-summary-list__key">
+                            <dt class="govuk-summary-list__value">
                                 @Localizer["Permissions"]
                             </dt>
                         </div>
