--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/CheckYourDetails.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/CheckYourDetails.cshtml
@@ -74,7 +74,7 @@
 
                         <div class="govuk-summary-list__row">
                             <div class="govuk-!-margin-right-3">
-                                <dt class="govuk-summary-list">
+                                <dt class="govuk-summary-list__value">
                                     <button class="govuk-button" data-module="govuk-button" type="submit">
                                         @Localizer["SaveAndContinue"]
                                     </button>
@@ -84,10 +84,6 @@
                                     </a>
                                 </dt>
                             </div>
-
-                            <dd class="govuk-summary-list__actions">
-                               
-                            </dd>
                         </div>
 
                     </dl>
