Redirect "basic user"  to update page

--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/CheckYourDetails.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/CheckYourDetails.cshtml
@@ -72,9 +72,8 @@
                         </div>
                         }
 
-                        <div class="govuk-summary-list__row">
                             <div class="govuk-!-margin-right-3">
-                                <dt class="govuk-summary-list">
+                                <dt class="govuk-summary-list__value">
                                     <button class="govuk-button" data-module="govuk-button" type="submit">
                                         @Localizer["SaveAndContinue"]
                                     </button>
@@ -84,12 +83,6 @@
                                     </a>
                                 </dt>
                             </div>
-
-                            <dd class="govuk-summary-list__actions">
-                               
-                            </dd>
-                        </div>
-
                     </dl>
 
                     <br />
