[feature/406133-org-details-have-not-changed: Added CompniesHouseNumber to models]

--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/CompanyDetailsHaveNotChanged.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/CompanyDetailsHaveNotChanged.cshtml
@@ -13,7 +13,7 @@
                 <h1 class="govuk-heading-l">@Localizer["PageHeading"]</h1>
                 <div class="govuk-body govuk-inset-text">
                     <p><strong>@Model.CompanyName</strong></p>
-                    <p>@Localizer["CompaniesHouseNumber"]<br>@Model.CompanyHouseNumber</p>
+                    <p>@Localizer["CompaniesHouseNumber"]<br>@Model.CompaniesHouseNumber</p>
                     <p>@Localizer["Address"]
                         @if (!string.IsNullOrEmpty(Model.SubBuildingName))
                         {
