[feature/406133-org-details-have-not-changed: Refactor based on test feedback]

--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/CompanyDetailsHaveNotChanged.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/CompanyDetailsHaveNotChanged.cshtml
@@ -9,8 +9,10 @@
 <div class="govuk-width-container">
     <main class="govuk-main-wrapper" id="main-content" role="main">
         <div class="govuk-grid-row">
-            <div class="govuk-grid-column-two-thirds">
+            <div class="govuk-grid-column-full">
                 <h1 class="govuk-heading-l">@Localizer["PageHeading"]</h1>
+            </div>
+            <div class="govuk-grid-column-two-thirds">
                 <div class="govuk-body govuk-inset-text">
                     <p><strong>@Model.CompanyName</strong></p>
                     <p>@Localizer["CompaniesHouseNumber"]<br>@Model.CompaniesHouseNumber</p>
