--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/UkNation.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/UkNation.cshtml
@@ -52,7 +52,7 @@
                     <div class="govuk-form-group@(!ViewData.ModelState.IsValid ? " govuk-form-group--error" : "")">
                         <fieldset class="govuk-fieldset" aria-describedby="">
                             <legend class="govuk-fieldset__legend">
-                                    <h2 class="fieldset__heading govuk-heading-m govuk-!-margin-bottom-0">@Localizer["UkNation.SoleTrader.WhereInTheIsYourUKBusinessBased"]</h2>
+                                    <h2 class="fieldset__heading govuk-heading-m govuk-!-margin-bottom-0">@Localizer["UkNation.WhereInTheIsYourUKBusinessBased"]</h2>
                             </legend>
 
                             @await Html.PartialAsync("Partials/Govuk/_ErrorList", errorsViewModel)
